# portfolio_website

./: balls.txt  build_stubs.sh
cpp_server/: CMakeLists.txt  Dockerfile.server
cpp_server/.cache/clangd/index/: baccarat_defs.h.8DE03D954D8F9A2E.idx  baccarat_hand.cpp.03E939824932F206.idx  baccarat_hand.h.15BB6857D578C02B.idx  baccarat_table.cpp.90782BF0DF2251B0.idx  baccarat_table.h.DC18D7AC5C13FE40.idx  card.cpp.5C916A75C7937E9A.idx  card.h.2BEE11DA90B02810.idx  deck.cpp.2B02FBFBB6A529E2.idx  deck.h.A1F064294F772A8A.idx  main.cpp.0BE34D9676F55B4B.idx
cpp_server/include/: baccarat_table.cpp  baccarat_table.h  deck.cpp  deck.h
cpp_server/src/: main.cpp
mysite/: db.sqlite3
mysite/core/: views.py
mysite/core/templates/core/: about.html  base.html  home.html
mysite/gRPC_demo/: apps.py  urls.py  views.py
mysite/gRPC_demo/rpc/: baccaratSim_pb2.py  baccaratSim_pb2_grpc.py  calculator_pb2.py  calculator_pb2_grpc.py  text_processor_pb2.py  text_processor_pb2_grpc.py
mysite/gRPC_demo/templates/gRPC_demo/: gRPC_demo.html
mysite/mysite/: settings.py  urls.py
mysite/projects/: models.py  urls.py  views.py
mysite/projects/migrations/: 0001_initial.py  0002_project_insiteproject_project_slug.py
mysite/projects/templates/projects/: project_detail.html  projects_page.html
protos/: baccaratSim.proto  calculator.proto  text_processor.proto
python_server/: server.py
python_server/services/: text_service.py
